--- a/5mvc_ex/src/main/webapp/WEB-INF/web.xml
+++ b/5mvc_ex/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- 애플리케이션 요청 request를 처리한다. : 프론트컨트롤러(DispatcherServlet)의 정의 -->
+	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -29,22 +29,5 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	<!-- DispatcherServlet 의 앞단에서 모든 요청에 대해 공통적으로 처리할 것들은
-		 Filter(필터)를 이용합니다. 필터는 사용자의 요청에 대해 변경할 수 있고
-		 응답에 대한 전달도 변경할 수 있습니다.	
-	 -->
-	 <filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>*</url-pattern>
-	</filter-mapping>
 
 </web-app>
